Updated "No-Results" to be quirky!

--- a/index.html
+++ b/index.html
@@ -69,7 +69,11 @@
                 </form>
             </div>
         </div>
-        <h1 class="no-results high-prio" style="display:block; text-align:center; display:none;">NO RESULTS!</h1>
+        <div class="no-results">
+            <h1 class="high-prio" style="display:block; text-align:center;">NO RESULTS!</h1>
+            <h2 style="display:block; text-align:center;">Sometimes, i'm just hard to shop for... So I included a link to Amazon's tech section. Your welcome. ;)</h2>
+            <a href="http://www.amazon.com/s/ref=nb_sb_noss?url=search-alias%3Delectronics&field-keywords=" style="text-decoration: underline; display:block; text-align:center; color:blue; font-size: 36px;">&rarr; Amazon.com &larr;</a>
+        </div>
         <hr>
     
         <div class="wishes">
